<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_stack.Fragment3">

    <Button
        android:id="@+id/returnToFragment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showFragment1" />

    <Button
        android:id="@+id/returnToFragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showFragment2" />

    <Button
        android:id="@+id/returnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnHome" />

</LinearLayout>