<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <Button
        android:id="@+id/showActivity1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showActivity1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showFragment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showFragment1"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@+id/showActivity1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showActivity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showActivity2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showActivity1" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showActivity2"
        tools:layout="@layout/fragment_apple" />

</androidx.constraintlayout.widget.ConstraintLayout>